--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,13 @@ requests = "==2.25.1"
 flask = "*"
 pytest = "*"
 pytest-freezegun = "*"
+pandas = "*"
+boto3 = "*"
+s3fs = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
