--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,12 @@ pluggy==1.0.0
 py==1.11.0
 pylint==2.11.1
 pyparsing==3.0.7
-pytest==7.0.0
+pytest~=7.1.2
 toml==0.10.2
 tomli==2.0.1
 typing_extensions==4.1.1
 wrapt==1.13.3
+
+boto3~=1.21.21
+pandas~=1.4.2
+botocore~=1.24.21
