Task 1 done + made directory de_intro
reworked structure of module task_1.py

--- a/data_engineering/de_intro/Dockerfile
+++ b/data_engineering/de_intro/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.10
 
 WORKDIR /data_engineering
-COPY ./requirements.txt ./
+COPY requirements.txt ./
 
 RUN pip install -r requirements.txt
-COPY ./script.py ./
+COPY script.py ./
 EXPOSE 5000
 CMD ["python","script.py"]
