--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,10 @@ s3fs = "*"
 sqlalchemy = "*"
 psycopg2-binary = "*"
 pyspark = "*"
+apache-airflow = "*"
+minio = "*"
+apache-airflow-backport-providers-amazon = "*"
+pyarrow = "==8.0.0"
 
 [dev-packages]
 
