--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,12 @@ tomli==2.0.1
 typing_extensions==4.1.1
 wrapt==1.13.3
 
-boto3~=1.21.21
+boto3~=1.15.18
 pandas~=1.4.2
-botocore~=1.24.21
+botocore~=1.18.18
 pyspark>=3.0.0
+colorama~=0.4.4
+SQLAlchemy~=1.4.9
+apache-airflow>=2.1.1
+requests~=2.23.0
+minio~=7.1.8
