--- a/data_engineering/airflow_project/docker-compose.yml
+++ b/data_engineering/airflow_project/docker-compose.yml
@@ -50,6 +50,24 @@ services:
             - .env
         command: minio server --console-address :9001 /data
 
+    spark-master:
+        image: bitnami/spark:3.2.0
+        hostname: spark-master
+        ports:
+            - "8080:8080"
+            - "7077:7077"
+        environment:
+            - SPARK_MODE=master
+
+    spark-worker:
+        image: bitnami/spark:3.2.0
+        depends_on:
+            - spark-master
+        ports:
+            - "8081:8081"
+        environment:
+            - SPARK_MODE=worker
+            - SPARK_MASTER=spark://spark-master:7077
 
 volumes:
     dags:
